# Codigo-Aplicacion-de-Aprendizaje-Federado

./: .gitignore  .gitmodules  README.md  prueba.py
src/: README.md  centralised_eval.txt  pyproject.toml  requirements.txt
src/configs/: retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-4-ss-0p6.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-4-ss-0p8.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-4-ss-1p0.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-6-ss-0p6.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-6-ss-0p8.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-6-ss-1p0.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-8-ss-0p6.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-8-ss-0p8.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p05-md-8-ss-1p0.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-4-ss-0p6.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-4-ss-0p8.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-4-ss-1p0.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-6-ss-0p6.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-6-ss-0p8.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-6-ss-1p0.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-8-ss-0p6.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-8-ss-0p8.toml  retailer_region-bagging-ce-off-tf-0p1-le-1-eta-0p1-md-8-ss-1p0.toml  retailer_region-bagging-ce-off-tf-0p1-le-10-eta-0p05-md-4-ss-0p6.toml  (+629 more)
src/scripts/: gen_configs.py  (+3 more)
(+299 files in other folders)
